--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://fonts.google.com/css2?family=Poppins:wgth@400;700&display">
+    <link rel="stylesheet" href="./src/assets/bootstrap/bootstrap.min.css">
     <title>Vite App</title>
   </head>
 
   <body>
     <div id="app"></div>
+    <script defer src="./src/assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 
